# clipp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  clipp.pc.in
docs/: doxyfile
examples/: Makefile  actions.cpp  align.cpp  alternatives.cpp  annotate.cpp  argv0.cpp  commands.cpp  complex_nesting.cpp  convert.cpp  counter.cpp  doc_filter.cpp  documentation.cpp  finder.cpp  float_vector.cpp  groups.cpp  joinable_flags.cpp  model.cpp  naval_fate.cpp  nested_alternatives.cpp  numbers.cpp  options.cpp  options_values.cpp  parsing.cpp  positional_values.cpp  repeatable.cpp  required_flags.cpp  sanity.cpp  send.cpp  simplify.cpp  switches.cpp  tagnames.cpp  text_formatting.cpp  timing.cpp  transform.cpp
include/: clipp.h
test/: CMakeLists.txt  actions_test.cpp  alternative_groups_test.cpp  alternative_options_test.cpp  alternative_required_test.cpp  blocking_test01.cpp  blocking_test02.cpp  blocking_test03.cpp  blocking_test04.cpp  blocking_test05.cpp  blocking_test06.cpp  blocking_test07.cpp  blocking_test08.cpp  blocking_test09.cpp  blocking_test1.cpp  blocking_test10.cpp  blocking_test2.cpp  blocking_test3.cpp  blocking_test4.cpp  blocking_test5.cpp  blocking_test6.cpp  blocking_test7.cpp  blocking_test8.cpp  blocking_test9.cpp  documentation_test.cpp  empty_args.cpp  flag_param_factories_test.cpp  joined_flags_test1.cpp  joined_flags_test2.cpp  joined_flags_test3.cpp  joined_flags_test4.cpp  joined_flags_test5.cpp  joined_flags_test6.cpp  joined_params_test1.cpp  joined_params_test2.cpp  joined_sequence_test.cpp  mixed_params_test.cpp  nesting_test.cpp  options_test.cpp  prefix_free_test.cpp  (+12 more)
